# MC4R_agonists

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
analyses/: 01_chembl_descriptive.py  02_structure_preparation.py  03_qsar_training_and_validation.py  04_reinvent_runs.py  05_chemical_space_analysis.py  06_structure_sensitivity.py  07_rl_strategy_sensitivity.py  08_constraint_sensitivity.py  09_selectivity_analysis.py  10_novelty_analysis.py  11_compound_prioritization.py  12_docking_rescoring.py  13_md_stability.py  14_synthesis_candidate_generation.py  15_benchmark_vs_setmelanotide.py
app/: streamlit_app.py
app/assets/: style.css
app/components/: chemical_space_plot.py  structure_viewer.py  toml_editor.py
app/pages/: 1_Overview.py  2_Data_and_Structures.py  3_REINVENT_Configuration.py  4_Run_and_Monitor.py  5_Results_Explorer.py  6_Sensitivity_Analysis.py
configs/: ahc_variant.toml  augmented_memory_variant.toml  stage_1_transfer_learning.toml  stage_2_rl_6w25.toml  stage_2_rl_7aue.toml  stage_2_rl_7f53.toml  stage_2_rl_7piu.toml  stage_2_rl_7piv.toml  stage_3_rl_relaxed_constraints.toml  stage_3_rl_strict_constraints.toml
src/mc4gen/: __init__.py  __main__.py  _logging.py  assumptions.py  estimands.py
src/mc4gen/chemotypes/: __init__.py  loader.py  mc4r_chemotypes.yaml
src/mc4gen/data/: __init__.py  cache.py  chembl.py  structures.py  vendors.py
src/mc4gen/docking/: __init__.py  constraints.py  interactions.py  prep.py  receptor_prep.py  smina.py  vina.py
src/mc4gen/md/: __init__.py  analysis.py  ligand_params.py  openmm_runner.py  system_builder.py
src/mc4gen/pipeline/: __init__.py  cluster.py  mmpbsa.py  prioritize.py  rationale.py  run_reinvent.py
src/mc4gen/qsar/: __init__.py  applicability_domain.py  ensemble.py  features.py  models.py  panel.py
src/mc4gen/reinvent_plugins/: __init__.py  dtos.py
src/mc4gen/reinvent_plugins/components/: __init__.py  calcium_coordination.py  chemotype_novelty.py  mc4r_docking_vina.py  melanocortin_selectivity.py  rascore_wrapper.py  vendor_novelty.py
src/mc4gen/reporting/: __init__.py  plots.py  structure_figures.py  tables.py
src/mc4gen/utils/: fingerprints.py  smiles.py  validation.py
tests/: conftest.py  test_calcium_coordination.py  test_chemotype_detection.py  test_data_chembl.py  test_docking_vina.py  test_integration_smoke.py  test_pipeline_prioritize.py  test_qsar_panel.py  test_redock_validation.py  test_reinvent_plugins.py  test_selectivity.py  test_structure_prep.py
