[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mc4gen"
version = "0.1.0"
description = "Fully open-source de novo design of MC4R-biased small-molecule agonists with REINVENT 4."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "mc4gen contributors" }]
keywords = ["drug-discovery", "reinvent", "mc4r", "gpcr", "de-novo-design"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "lightgbm>=4.2",
    "rdkit>=2024.3.1",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "py3Dmol>=2.0",
    "biopython>=1.83",
    "requests>=2.31",
    "joblib>=1.3",
    "jinja2>=3.1",
]

[project.optional-dependencies]
docking = [
    "openbabel-wheel>=3.1",
    "dimorphite-dl>=1.3",
    "meeko>=0.5",
    "vina>=1.2.5",
    "plip>=2.3",
    "prolif>=2.0",
]
md = [
    "pdbfixer>=1.9",
    "propka>=3.5",
    "openmm>=8.1",
    "mdanalysis>=2.7",
    "acpype>=2023.10",
]
reinvent = [
    "reinvent @ git+https://github.com/MolecularAI/REINVENT4@main",
    "chemprop>=1.6",
]
retrosynth = [
    "aizynthfinder>=4.0",
]
rascore = [
    "rascore @ git+https://github.com/reymond-group/RAscore@main",
]
app = [
    "streamlit>=1.32",
    "streamlit-molstar>=0.5",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.98",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-requests",
    "types-PyYAML",
]
full = [
    "mc4gen[docking,md,reinvent,retrosynth,rascore,app,dev]",
]

[project.entry-points."reinvent.plugins.components"]
mc4r_docking_vina = "mc4gen.reinvent_plugins.components.mc4r_docking_vina:MC4RDockingVina"
melanocortin_selectivity = "mc4gen.reinvent_plugins.components.melanocortin_selectivity:MelanocortinSelectivityPanel"
chemotype_novelty = "mc4gen.reinvent_plugins.components.chemotype_novelty:ChemotypeNoveltyFilter"
calcium_coordination = "mc4gen.reinvent_plugins.components.calcium_coordination:CalciumCoordinationPredictor"
vendor_novelty = "mc4gen.reinvent_plugins.components.vendor_novelty:VendorNoveltyFilter"
rascore_component = "mc4gen.reinvent_plugins.components.rascore_wrapper:RAScoreComponent"

[project.scripts]
mc4gen = "mc4gen.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mc4gen = ["chemotypes/*.yaml", "data/static/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "rdkit.*",
    "vina.*",
    "meeko.*",
    "dimorphite_dl.*",
    "plip.*",
    "prolif.*",
    "pdbfixer.*",
    "propka.*",
    "openmm.*",
    "MDAnalysis.*",
    "acpype.*",
    "lightgbm.*",
    "chemprop.*",
    "aizynthfinder.*",
    "RAscore.*",
    "rascore.*",
    "py3Dmol.*",
    "streamlit.*",
    "streamlit_molstar.*",
    "Bio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["mc4gen"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
